# gpt2json

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: github-release-workflow.yml  input-formats.md  mail-backends.md  privacy.md  project-structure.md  release.md  troubleshooting.md
docs/workflows/: ci.yml
gpt2json/: __init__.py  _signature.py  cli.py  engine.py  formats.py  gui.py  gui_file_dialog.py  gui_log_style.py  gui_paths.py  gui_resources.py  gui_text_menu.py  gui_theme.py  gui_widgets.py  mail_backends.py  mail_providers.py  models.py  oauth.py  otp.py  parsing.py  protocol.py  updater.py
packaging/windows/: GPT2JSON.iss  build-art-installer.ps1  build-art-uninstaller.ps1  build-installer.ps1  build-portable.ps1
packaging/windows/artsetup/: ArtSetup.cs  ArtUninstall.cs
scripts/: capture_installer_preview.py  check_release.py  clean_workspace.py  generate_docs_assets.py  launch_gui.py
tests/: test_clean_workspace.py  test_engine.py  test_formats.py  test_gui.py  test_mail_backends.py  test_mail_providers.py  test_otp.py  test_parsing.py  test_protocol.py  test_updater.py  test_windows_packaging.py
